--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <button id="increment-btn" onclick="increment()">increment</button>
     <button id="save-btn" onclick="save()">SAVE</button>
     <p id="save-el">Previous entries: </p>
-
+    <p id="save-el">Previous entries: </p>
   </div>
-  <script src = "index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
